...
                .onDelete(perform: delete)
            }
            
        }
        
        .toolbar(content: SidebarViewToolbar.init)
        .navigationTitle("Filters")
        .alert("Rename tag", isPresented: $renamingTag) {
            Button("OK", action: completeRename)
            Button("Cancel", role: .cancel) { }
            TextField("New name", text: $tagName)
        }
        
    }
    
...
